--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -5,7 +5,7 @@ permissions:
 
 on:
   schedule:
-    - cron: "0 17 * * *" # every day
+    - cron: "0 17 */15 * *" # every day
   workflow_dispatch:
 
 jobs:
